Option to update note and order notes by date- ASC

--- a/src/app/add-note/add-note.component.html
+++ b/src/app/add-note/add-note.component.html
@@ -7,4 +7,5 @@
     <input type="checkbox" #isDone value="false" />
   </label>
   <button (click)="addNote(text, date, isDone)">Add</button>
+  <button (click)="orderDateBtn()">Order By Date</button>
 </div>
